Fix sustaining donors list items' color contrast
Increasing color contrast on donors list items to meet
WCAG level AA conformance.

Bug: T185288

--- a/2017/styles/main.css
+++ b/2017/styles/main.css
@@ -5212,7 +5212,7 @@ svg[class*="hero__shape"] {
 }
 
 .u-text-brand-light-blue {
-  color: #009EE2;
+  color: #007dbd;
 }
 
 /**
